tests/invariant/invariant.exp
Error ----------------------------------------------------------------------------------------------------- index.js:4:1

This use of `invariant` is unnecessary because boolean literal `true` [1] is always truthy. [unnecessary-invariant]

   index.js:4:1
   4| invariant(a);
      ^^^^^^^^^^^^

References:
   index.js:3:16
   3| declare var a: true;
                     ^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- index.js:11:5

This use of `invariant` is unnecessary because boolean [1] is always truthy. [unnecessary-invariant]

   index.js:11:5
   11| c ? invariant(c) : invariant(c);
           ^^^^^^^^^^^^

References:
   index.js:9:16
    9| declare var c: boolean;
                      ^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- index.js:17:1

This use of `invariant` is unnecessary because number literal `1` [1] is always truthy. [unnecessary-invariant]

   index.js:17:1
   17| invariant(e);
       ^^^^^^^^^^^^

References:
   index.js:16:16
   16| declare var e: 1;
                      ^ [1]


Error ---------------------------------------------------------------------------------------------------- index.js:23:1

This use of `invariant` is unnecessary because intersection type [1] is always truthy. [unnecessary-invariant]

   index.js:23:1
   23| invariant(g);
       ^^^^^^^^^^^^

References:
   index.js:22:16
   22| declare var g: false & true;
                      ^^^^^^^^^^^^ [1]



Found 4 errors
